# Mlir_Study_Demo

./: .gitignore  CMakeLists.txt  Readme.md  setup_code_fix.sh  setup_completion.sh  start_build.sh
mlir_file/: demo10_affine.mlir  demo10_affine_func.mlir  demo11_matrix_add.mlir  demo12_matmul.mlir  demo8_add_func.mlir  demo9_loop_func.mlir  simple_func.mlir
src/: demo10_affine.cpp  demo11_matrix_add.cpp  demo12_matmul.cpp  demo1_module.cpp  demo2_func_and_op.cpp  demo3_add_op.cpp  demo4_for.cpp  demo5_memref.cpp  demo6_matmul.cpp  demo7_mlir_file_read.cpp  demo8_add_func.cpp  demo9_loop_func.cpp  main.cpp  simple_mlir.cpp
